Fixed AdvancedChatHUD#issue-2  + Do not add message to MainChat on setupTabs